...
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_account_fragment_account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_ex_paytm" />

        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_account_fragment_account_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_account_fragment_account_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_ex_paytm_payments_bank" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_account_fragment_account_desc_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_account_fragment_account_initial_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/initial_amount_ex_266_0"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

...
