...
    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="apply">Apply</string>
    <string name="to_expense_account">To Expense Account</string>
    <string name="from_income_account">From Income Account</string>
    <string name="enter_a_6_digit_pin">Enter 6 digit PIN</string>
    <string name="todo">TODO</string>
    <string name="account_description">Account Description</string>
    <string name="account_name">Account Name</string>
    <string name="mit_license">MIT License</string>
    <string name="developed_by">Developed by,</string>
...
